--- a/Topic-11-Confidence-Intervals-Proportion.rmd
+++ b/Topic-11-Confidence-Intervals-Proportion.rmd
@@ -29,7 +29,7 @@ library(latex2exp)
 
 ## Learning Goals for Confidence Intervals
 
-- Construct and interpret a confidence intervals for one population proportion.
+- Construct and interpret a confidence interval for one population proportion.
 
 - Describe how the following will affect the width of the confidence interval:
 
@@ -42,22 +42,21 @@ library(latex2exp)
 ## Confidence Interval for a Proportion (1 of 2)
 
 - Recall that the standard error of sample proportions is $\sigma_{\hat{P}}=\sqrt{\frac{p(1-p)}{n}}$, where $n$ is the sample size and $p$ is the population proportion. As a consequence, when estimating the population proportion $p$, we only have a point estimate $\hat{p}$ (phat) to use. For the standard error, we use the estimation
-  $$\textstyle \sigma_{\hat{p}}\approx\hat{\sigma}_{\hat{p}}=\sqrt{\frac{\hat{p}(1-\hat{p})}{n}}.$$
+  $\textstyle \sigma_{\hat{p}}\approx\hat{\sigma}_{\hat{p}}=\sqrt{\frac{\hat{p}(1-\hat{p})}{n}}$ `=SQRT(phat*(1-phat)/n)`.
 
-- Based on the central limit theorem, when $n$ is large enough, at the $100(1-\alpha)\%$ level, the margin of error for $p$ is defined as
-  $$\textstyle E=z_{\alpha/2}\sqrt{\frac{\hat{p}(1-\hat{p})}{n}}$$
-  In Excel, $z_{\alpha/2}$=`NORM.S.INV((1 + confidence level)/2)`. The marginal error can also be obtained by
-  `CONFIDENCE.NORM(1-confidence level, SQRT(phat*(1-phat)/n, n)`.
+- Since the standard error is determined by $\hat{p}$, the standardization of $\hat{p}$ is determined completely by $\hat{p}$. If the sample proportion is approximately normally distributed, then we can use the standard normal distribution to find the critical value: $z_{\alpha/2}$ `=NORM.S.INV(0.5+ Confidence Level/2)`.
+
+- The margin of error for $p$ is
+  $$\textstyle E=\text{critical value}*\text{standard error}=z_{\alpha/2}\sqrt{\frac{\hat{p}(1-\hat{p})}{n}}.$$
 
 ---
 
 ## Confidence Interval for a Proportion (2 of 2)
 
 - The confidence interval for $p$ is defined by
-  $$[\hat{p}-E,\hat{p}+E]=\left[\hat{p}-z_{\alpha/2}\sqrt{\frac{\hat{p}(1-\hat{p})}{n}}, \hat{p}+z_{\alpha/2}\sqrt{\frac{\hat{p}(1-\hat{p})}{n}}\right],$$
-  where [the critical value $z_{\alpha/2}$ satisfies that $P(Z< z_{\alpha/2})=1-\alpha/2$](https://saylordotorg.github.io/text_introductory-statistics/s11-01-large-sample-estimation-of-a-p.html) for the standard normal variable $Z$.
+  $$[\hat{p}-E,\hat{p}+E]=\left[\hat{p}-z_{\alpha/2}\sqrt{\frac{\hat{p}(1-\hat{p})}{n}}, \hat{p}+z_{\alpha/2}\sqrt{\frac{\hat{p}(1-\hat{p})}{n}}\right].$$
 
-- In practical, the sample size $n$ is considered large enough if $n\hat{p}\ge 10$ and $n(1-\hat{p})\ge 10$.
+- In practice, the sample proportion is approximately normal if the sample size $n$ satisfies $n\hat{p}\ge 10$ and $n(1-\hat{p})=n-n\hat{p}\ge 10$.
 
 - The above defined confidence interval is known as the [normal approximation (or Wald's) confidence interval](https://en.wikipedia.org/wiki/Binomial_proportion_confidence_interval).
   It is popular in introductory statistics books. However, it is unreliable when the sample size is small or the sample proportion is close to 0 or 1.
@@ -94,19 +93,19 @@ $$\hat{\sigma}_{\hat{P}}=\sqrt{\frac{\hat{p}(1-\hat{p})}{n}}=\sqrt{\frac{0.65(1-
 
 ## Example: Proportion of Students Taking Busses (2 of 2)
 
-At 99% level of confidence, the value $1-\alpha/2=(1+\text{confidence level})/2=(1+0.99)/2=0.995$. The critical value $z_{\alpha/2}$ is determined by the equation $P(Z<z_{\alpha/2})=0.9955$. Using the Excel function `NORM.S.INV(0.995)`, we find the critical value \\(z_{\alpha/2}\approx 2.576\\).
+At 99% level of confidence, $\alpha/2=(1-\text{confidence level})/2$, the critical value $z_{\alpha/2}$ is determined by the equation $P(Z<z_{\alpha/2})=1-\alpha/2=0.5+\text{confidence level}/2$. In Excel, the critical value is $z_{\alpha/2}$ `=NORM.S.INV(0.5+99%/2)` $\approx 2.576$.
 
-Thus the marginal error is
+The marginal error is
 $E=z_{\alpha/2}\cdot \hat{\sigma}_{\hat{P}}=`r round(qnorm(1-0.01/2,0,1),3)`\cdot `r round(sqrt(0.65*(1-0.65)/100), 3)`=`r busME=round(qnorm(1-0.01/2,0,1)*sqrt(0.65*(1-0.65)/100), 3); busME`,$
 and the confidence interval at 99% level is
 $$[\hat{p}-E, \hat{p}+E]\approx [0.65-`r busME`, 0.65+`r busME`]=[`r 0.65- busME`, `r 0.65+busME`].$$
 
 Conclusion: we are 99% confident that the proportion of all students at the college who take bus is in the interval $[`r 0.65- busME`, `r 0.65+busME`]$.
 
-::: {.footmark}
+<!-- ::: {.footmark}
   **Note:** The marginal error can also be obtained by the Excel function
   `CONFIDENCE.NORM(1-0.99, SQRT(65/100*(1-65/100)/100), 100)`.
-:::
+::: -->
 
 ---
 
@@ -145,7 +144,7 @@ Suppose you want to estimate the proportion of students at QCC who live in Queen
 
 **Solution:** We may use $\hat{p}=0.7$ as a reasonable guess for the population proportion.
 
-At the 95% level, the critical value is $z_{\alpha/2}=$ `NORM.S.INV((1+0.95)/2)` $\approx 1.96$.
+At the 95% level, the critical value is $z_{\alpha/2}=$ `NORM.S.INV(0.5+0.95/2)` $\approx 1.96$.
 
 Since the marginal error is $E=0.02$, the appropriate minimal sample size is determined by
 $$n=\left(\frac{z_{\alpha/2}}{{E}}\right)^2\cdot \hat{p}(1-\hat{p})=(1.96/0.02)^2\cdot 0.7\cdot(1-0.7)=2016.84.$$
@@ -158,7 +157,7 @@ Since the sample size has to be an integer, to get a error no more than 2% at th
 
 Find the minimum sample size necessary to construct a 99% confidence interval for the population mean with a margin of error $E =0.2$. Assume that the estimated population standard deviation is $\sigma=1.3$.
 
-**Solution:** At the 99% level, the critical value $z_{\alpha/2}=$ `NORM.S.INV((1+0.99)/2)` $\approx 2.576$.
+**Solution:** At the 99% level, the critical value $z_{\alpha/2}=$ `NORM.S.INV(0.5+0.99/2)` $\approx 2.576$.
 
 The desired marginal error is ${E}=0.2$.
 
@@ -167,7 +166,7 @@ The estimated population standard deviation is $\sigma=1.3$.
 Then the minimal sample size is approximately
 $$n=\left(\dfrac{z_{\alpha/2}\cdot \sigma}{{E}}\right)^2\approx (2.576\cdot 1.3/0.2)^2 \approx 280.4.$$
 
-To get a error no more than 0.2 at the level 95%,  the minimal sample size should be at least 281.
+To get a error no more than 0.2 at the level 95%, the minimal sample size should be at least 281.
 
 ---
 
@@ -181,7 +180,7 @@ To get a error no more than 0.2 at the level 95%,  the minimal sample size shoul
 
 ## Practice: Confidence Intervals for Product Quality {.unnumbered}
 
-To understand the reason for returned goods, the manager of a store examines the records on 40 products that were returned in the last year. Reasons were coded by 1 for “defective,” 2 for “unsatisfactory,” and 0 for all other reasons, with the results shown in the table.
+To understand the reason for returned goods, the manager of a store examines the records on 40 products that were returned during the last year. Reasons were coded by 1 for “defective,” 2 for “unsatisfactory,” and 0 for all other reasons, with the results shown in the table.
 
 ::: {.center}
 ```{r echo=FALSE}
