--- a/Topic-12-Concepts-of-Hypothesis-Testing.rmd
+++ b/Topic-12-Concepts-of-Hypothesis-Testing.rmd
@@ -134,7 +134,7 @@ kable(tbd, format = "html", escape=F)%>%
 - Failing to reject the null hypothesis when it is false is called a **type II error**. The probability of a type II error is usually denoted by $\beta$. The **power of a hypothesis test**, equals $1-\beta$, is the probability of rejecting the null hypothesis when it is false.
 
 ::: {.center}
-  ![Type 1 and Type 2 Errors](Figures/type-i-and-type-ii-errors.jpg){30%"}
+  ![Type 1 and Type 2 Errors](Figures/type-i-and-type-ii-errors.jpg){"30%"}
 :::
 
 ::: {.footmark}
@@ -209,7 +209,7 @@ Decide whether the following statements are true or false. Explain your reasonin
 - That the $P$-value of a sample statistic is $p=0$ means the null hypothesis cannot be true.
 
 ::: {.footmark}
-Questions are partially taken from [Conceptual questions on hypothesis testing](http://www2.stat.duke.edu/~jerry/sta101/tests.html)
+More [conceptual questions on hypothesis testing](http://www2.stat.duke.edu/~jerry/sta101/tests.html)
 :::
 
 ---
